--- a/Js.conf
+++ b/Js.conf
@@ -1,4 +1,4 @@
-hostname = buy.itunes.apple.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, mp.weixin.qq.com, vsco.co, backend.getdrafts.com, 
+hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, mp.weixin.qq.com, vsco.co, backend.getdrafts.com, 
 
 #Picsew  内购解锁
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
@@ -20,6 +20,10 @@ hostname = buy.itunes.apple.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com,
 #draft
 ^https:\/\/backend\.getdrafts\.com\/api\/.*\/verification* url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/draft.js
 
+#Readdle Documenst
+# > 002 Document Pro 解锁会员编辑功能（2022-05-11）@ddgksf2013
+^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-request-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/documents.js
+########^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-response-body https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/documents.js
 
 ##大雄脚本组
 
