--- a/Js.conf
+++ b/Js.conf
@@ -1,10 +1,13 @@
 hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, mp.weixin.qq.com, vsco.co, backend.getdrafts.com, 
+#RevenueCat
+# ～ RevenueCat（2022-10-12）@ddgksf2013
+^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/(\$RCAnonymousID%)?(\w)*$) url script-echo-response https://gitlab.com/ddgksf2013/Cuttlefish/-/raw/master/Crack/revenuecat.js
 
 #Picsew  内购解锁
 ^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
 
 #pixiv remove ad
-^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/wubulaba/surgescript/master/Script/PixivPremium.js
+^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/PixivPremium.js
 
 ##NobyDa
 
