--- a/Js.conf
+++ b/Js.conf
@@ -15,8 +15,9 @@ hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, 
 ^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
-# VSCO滤镜VIP
-^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
+# VSCO滤镜VIP 
+#revenuecat已包含
+#^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
 
 ##越南老哥langkhach270389
 
