--- a/Js.conf
+++ b/Js.conf
@@ -26,8 +26,8 @@ hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, 
 
 #Readdle Documenst
 # > 002 Document Pro 解锁会员编辑功能（2022-05-11）@ddgksf2013
-^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-request-body https://codeberg.org/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
-########^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-response-body https://codeberg.org/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
+^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-request-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
+########^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-response-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
 
 # 京东比价 (yichahucha)
 ^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
