--- a/Js.conf
+++ b/Js.conf
@@ -4,7 +4,7 @@ hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, 
 ^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/(\$RCAnonymousID%)?(\w)*$) url script-echo-response https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/revenuecat.js
 
 #Picsew  内购解锁
-^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
+;^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
 
 #pixiv remove ad
 ^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/PixivPremium.js
@@ -12,7 +12,7 @@ hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, 
 ##NobyDa
 
 # 去微信公众号广告 (By Choler)
-^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
+;^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
 # VSCO滤镜VIP 
