--- a/Js.conf
+++ b/Js.conf
@@ -1,10 +1,10 @@
-hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, mp.weixin.qq.com, vsco.co, backend.getdrafts.com, 
+hostname = license.pdfexpert.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, vsco.co, backend.getdrafts.com, 
 #RevenueCat
 # ～ RevenueCat（2022-10-12）@ddgksf2013
 ^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/(\$RCAnonymousID%)?(\w)*$) url script-echo-response https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/revenuecat.js
 
 #Picsew  内购解锁
-;^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
+#^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
 
 #pixiv remove ad
 ^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/PixivPremium.js
@@ -12,7 +12,7 @@ hostname = license.pdfexpert.com, buy.itunes.apple.com, oauth.secure.pixiv.net, 
 ##NobyDa
 
 # 去微信公众号广告 (By Choler)
-;^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
+#^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
 
 
 # VSCO滤镜VIP 
