--- a/Js.conf
+++ b/Js.conf
@@ -1,19 +1,10 @@
-hostname = license.pdfexpert.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com, api.m.jd.com, api.revenuecat.com, vsco.co, backend.getdrafts.com, 
-#RevenueCat
-# ～ RevenueCat（2022-10-12）@ddgksf2013
-^https:\/\/api\.revenuecat\.com\/.+\/(receipts$|subscribers\/(\$RCAnonymousID%)?(\w)*$) url script-echo-response https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/revenuecat.js
+hostname = oauth.secure.pixiv.net, vsco.co, backend.getdrafts.com, 
 
 #Picsew  内购解锁
 #^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
 
 #pixiv remove ad
 ^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/PixivPremium.js
-
-##NobyDa
-
-# 去微信公众号广告 (By Choler)
-#^https?:\/\/mp\.weixin\.qq\.com\/mp\/getappmsgad url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/Wechat.js
-
 
 # VSCO滤镜VIP 
 #revenuecat已包含
@@ -23,15 +14,3 @@ hostname = license.pdfexpert.com, oauth.secure.pixiv.net, trade-acs.m.taobao.com
 
 #draft
 ^https:\/\/backend\.getdrafts\.com\/api\/.*\/verification* url script-response-body https://raw.githubusercontent.com/langkhach270389/Quantumult-X-LK/master/Scripts/langkhach/draft.js
-
-#Readdle Documenst
-# > 002 Document Pro 解锁会员编辑功能（2022-05-11）@ddgksf2013
-^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-request-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
-########^https?:\/\/license\.pdfexpert\.com\/api\/\d\.\d\/\w{9}\/\w{12}\/(state$|refresh$|check$) url script-response-body https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Crack/documents.js
-
-# 京东比价 (yichahucha)
-^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig) url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
-
-# 淘宝比价 (yichahucha)
-^http://.+/amdc/mobileDispatch url script-request-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail url script-response-body https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
