--- a/Js.conf
+++ b/Js.conf
@@ -1,14 +1,10 @@
-hostname = oauth.secure.pixiv.net, vsco.co, backend.getdrafts.com, 
+hostname = oauth.secure.pixiv.net, backend.getdrafts.com, 
 
 #Picsew  内购解锁
 #^https:\/\/buy\.itunes\.apple\.com\/verifyReceipt url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/Picsew.js
 
 #pixiv remove ad
 ^https:\/\/oauth\.secure\.pixiv\.net\/auth\/token url script-response-body https://raw.githubusercontent.com/demom3b/QuantumultX/master/Script/PixivPremium.js
-
-# VSCO滤镜VIP 
-#revenuecat已包含
-#^https?:\/\/vsco\.co\/api\/subscriptions\/2.1\/user-subscriptions\/ url script-response-body https://raw.githubusercontent.com/NobyDa/Script/master/QuantumultX/File/vsco.js
 
 ##越南老哥langkhach270389
 
